Issue #2564857 by bruvers, rudraram, thamas, LewisNyman: Long forum description breaks the layout in forum list

--- a/core/modules/forum/css/forum.theme.css
+++ b/core/modules/forum/css/forum.theme.css
@@ -7,9 +7,6 @@
   font-size: 0.9em;
   margin: 0.5em;
 }
-.forum td {
-  white-space: nowrap;
-}
 .forum__icon {
   background-image: url(../icons/forum-icons.png);
   background-repeat: no-repeat;
